--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                     q: ~~(rand() * heartPointsCount),
                     D: 2 * (i % 2) - 1,
                     force: 0.2 * rand() + 0.7,
-                    f: "hsla(300," + ~~(40 * rand() + 60) + "%," + ~~(60 * rand() + 20) + "%,1)",
+                    f: "hsla(338.889," + ~~(40 * rand() + 40) + "%," + ~~(30 * rand() + 30) + "%,1",
                     trace: []
                 };
                 for (var k = 0; k < traceCount; k++) e[i].trace[k] = { x: x, y: y };
